# resume-jd-tailor

./: .env.example  .gitignore  CONSTITUTION.md  LICENSE  README.en.md  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
agents/: openai.yaml
assets/data/experiences/: experiences_en.example.yaml  experiences_zh.example.yaml
assets/data/jd/: jd.example.yaml
assets/data/layout/: constitution.yaml
assets/data/profile/: base_resume.example.json
assets/templates/: template_html.html
references/: conventions.md  requirements.md
scripts/: audit_resume_pdf_style.py  build_resume_data.py  build_resume_html_pdf.py  clean_outputs.py  console.py  html_to_pdf.py  init_workspace.py  publish_latest.py  render_resume_html.py  resume_semantic.py  run_latest.py  validate_skill.py
